--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
 		"start": "wp-scripts start --webpack-copy-php"
 	},
 	"devDependencies": {
+		"@wordpress/block-editor": "^14.6.0",
+		"@wordpress/blocks": "^14.0.0",
+		"@wordpress/components": "^28.11.0",
+		"@wordpress/core-data": "^7.11.0",
+		"@wordpress/element": "^6.11.0",
 		"@wordpress/env": "^10.11.0",
+		"@wordpress/i18n": "^5.11.0",
 		"@wordpress/scripts": "^30.4.0"
 	}
 }
